--- a/style.css
+++ b/style.css
@@ -435,6 +435,7 @@
     text-align: center;
 }
 
+
 .our_cuauses .our_cuauses_single {
     margin-top: 75px;
     margin-bottom: 55px;
@@ -1136,4 +1137,59 @@
 }
 .footer_carosal_icon .owl-nav{
     display: none;
+}
+
+
+
+
+.topnav {
+  overflow: hidden;
+
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
